# goldo_robot_simulator

./: CMakeLists.txt  package.xml
libs/: CMakeLists.txt
libs/goldo_robot/: CMakeLists.txt
libs/goldo_robot/include/goldo/control/: propulsion_controller.hpp  propulsion_low_level_controller.hpp  speed_controller.hpp  trapezoidal_speed_profile.hpp
libs/goldo_robot/include/goldo/geometry/: trajectory.hpp
libs/goldo_robot/include/goldo/odometry/: simple_odometry.hpp
libs/goldo_robot/src/control/: pid_controller.cpp  propulsion_controller.cpp  propulsion_low_level_controller.cpp  trapezoidal_speed_profile.cpp
libs/goldo_robot/src/geometry/: trajectory.cpp
libs/goldo_robot/src/odometry/: simple_odometry.cpp
src/: geometry.hpp  odometry_config.hpp  pid_config.hpp  pid_controller.cpp  pid_controller.hpp  propulsion_controller.cpp  propulsion_controller.hpp  propulsion_controller_config.hpp  propulsion_low_level_controller.cpp  propulsion_low_level_controller.hpp  robot_simulator.cpp  robot_simulator.hpp  robot_simulator_node.cpp  simple_odometry.cpp  simple_odometry.hpp  trajectory.cpp  trajectory_buffer.hpp  trapezoidal_speed_profile.cpp
